# rag-mcp

./: .gitignore  example.env  example.py  main.py  mcp_server.py  pyproject.toml  surrealdb_client.py
utils/: embeddings.py  file_loader.py  fs.py  ingestion.py  pdf_loader.py
